cabal-version:      2.4
name:               dependentml
version:            0.1.0.0

executable dependentml
    main-is:            Main.hs
    other-modules:  
        Source
    build-depends:      
        base ^>=4.14.3.0,
        protolude
    hs-source-dirs:     app
    default-language:   Haskell2010
    default-extensions:
    mixins:   
        base hiding (Prelude), 
        protolude (Protolude as Prelude), 
        protolude